# 3ds_Assignement_Data_Scientist_Customer_Success

./: .gitignore  README.md  app.py  chatbot.py  compute_embedding.py  config.py  exemple.env  knowledge_graph_retriever.py  llm_handler.py  pyproject.toml
1. Analysis/: 2. Concise Knowledge Graph Construction.md  3ds_Assignement_Data_Scientist_Customer_Success_Knowledge_Design.mmd
2. Code/: README.md  chatbot.py  compute_embedding.py  config.py  knowledge_graph_retriever.py  llm_handler.py  load_dataset.cypher  main.py
2. Code/datasets/: generate_datasets.py
2. Code/llm_history/: 2025-06-01 10:49:13.576770.json  2025-06-01 10:55:43.364459.json  2025-06-01 11:04:49.164243.json  2025-06-01 12:11:44.350933.json  2025-06-01 12:32:14.697046.json  2025-06-01 12:45:56.863383.json  2025-06-01 12:47:34.656173.json  2025-06-01 13:10:26.194541.json  2025-06-01 13:32:54.607898.json  2025-06-01 18:48:05.659117.json  2025-06-01 19:06:53.222072.json  2025-06-01 19:12:09.742178.json  2025-06-01 19:12:09.json  2025-06-01 19:39:35.798183.json  2025-06-01 20:00:15.429905.json  2025-06-01 23:14:48.280243.json  2025-06-01 23:15:39.002739.json  2025-06-01 23:23:12.862494.json  2025-06-01 23:23:51.083300.json  2025-06-01 23:30:54.543518.json  2025-06-01 23:33:16.102101.json  2025-06-01 23:37:49.895697.json  2025-06-01 23:44:52.559154.json  2025-06-01 23:59:30.181698.json  2025-06-02 00:03:21.371528.json  2025-06-02 00:09:23.926242.json  2025-06-02 00:11:09.376368.json  2025-06-02 00:15:25.437938.json  (+22 more)
datasets/: setup_database.cypher  upload_embeddings.cypher
(+26 files in other folders)
