[project]
name = "3ds-assignement-data-scientist-customer-success"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexis Balayre",email = "alexis@balayre.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "neo4j (>=5.28.1,<6.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "llama-index (>=0.12.38,<0.13.0)",
    "llama-index-llms-ollama (>=0.6.0,<0.7.0)",
    "llama-index-embeddings-ollama (>=0.6.0,<0.7.0)",
    "streamlit (>=1.45.1,<2.0.0)",
    "ollama (>=0.5.1,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

